--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "lint": "eslint"
   },
   "keywords": [],
-  "author": "",
+  "author": "David Balladares",
   "license": "ISC",
   "devDependencies": {
     "eslint": "^7.32.0",
@@ -21,9 +21,13 @@
   "dependencies": {
     "@hapi/boom": "^9.1.4",
     "cors": "^2.8.5",
+    "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "faker": "^5.5.3",
-    "joi": "^17.4.2"
+    "joi": "^17.4.2",
+    "pg": "^8.7.1",
+    "pg-hstore": "^2.3.4",
+    "sequelize": "^6.8.0"
   },
   "engines": {
     "node": "14.x"
